changed bg height, trying to fix height issue on mobile devices

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -741,6 +741,10 @@ video {
   height: 100vh;
 }
 
+.h-\[100svh\] {
+  height: 100svh;
+}
+
 .min-h-\[512px\] {
   min-height: 512px;
 }
